--- a/templates/show_entries.html
+++ b/templates/show_entries.html
@@ -3,17 +3,24 @@
   {% if session.logged_in %}
   <form action="{{ url_for('add_entry') }}" method=post class=add-entry>
       <dl>
+
         <dt>Title:
         <dd><input type=text size=30 name=title>
         <dt>Text:
         <dd><textarea name=text rows=5 cols=40></textarea>
+        <dt>Start time</dt>
+        <dd><input Type="text" name="start_time"></dd>
+        <dt>End time</dt>
+        <dd><input Type="text" name="end_time"></dd>
+
         <dd><input type=submit value=Share>
       </dl>
   </form>
 {% endif %}
 <ul class=entries>
 {% for entry in entries %}
-<li><h2>{{ entry.title }} <span class=user> by {{ entry.username }} </span></h2> {{ entry.text|safe }}
+<li><h2>{{ entry.title }} <span class=user> by {{ entry.username }} </span></h2>{{ entry.text|safe }}
+<li>Start time: {{entry.start_time}} ; End time: {{entry.end_time}}
 {% else %}
 <li><em>No entries here yet</em></li>
 {% endfor %}
