--- a/static/style1.css
+++ b/static/style1.css
@@ -1,8 +1,8 @@
-body            { font-family: sans-serif; background: #eee; }
-a, h1, h2       { color: #377ba8; }
-h1, h2          { font-family: 'Georgia', serif; margin: 0; }
-h1              { border-bottom: 2px solid #eee; }
-h2              { font-size: 1.2em; }
+body            { font-family: sans-serif; background: #E8E8E8; }
+a, h1, h2       { color: #003fa8; }
+h1, h2          { font-family: 'Geneva', serif; margin: 0; }
+h1              { border-bottom: 5px solid rgba(238, 238, 238, 0.39); }
+h2              { font-size: 1em; }
 
 .page           { margin: 2em auto; width: 35em; border: 5px solid #ccc; 
                   padding: 0.8em; background: white; }
@@ -16,4 +16,4 @@ h2              { font-size: 1.2em; }
 .flash          { background: #cee5F5; padding: 0.5em; 
                   border: 1px solid: #aacbe2; }
 .error          { background: #f0d6d6; padding: 0.5em; }
-.user           { font-family: sans-serif; color: #dc3900; font-size:0.8em}
+.user           { font-family: sans-serif; color: #9900CC; font-size:0.4em}
