--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <title>My Dev Log</title>
-<link rel=stylesheet type=text/css href=" {{ url_for('static', filename='style.css')}}">
+<link rel=stylesheet type=text/css href=" {{ url_for('static', filename='style1.css')}}">
 <div class=page>
     <h1>My Dev Log</h1>
     <div class=metanav>
